--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ABC Online Shop API</name>
+	<name>ABC_OnlineShop_API</name>
 	<comment></comment>
 	<projects>
 	</projects>
