--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.3.2.RELEASE</version>
 		</dependency>
+		 <dependency>
+      		<groupId>org.springframework.data</groupId>
+      		<artifactId>spring-data-jpa</artifactId>
+     		 <version>1.0.3.RELEASE</version>
+    	</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
