--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -100,8 +101,55 @@
 		    <version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+	    	<groupId>junit</groupId>
+	      	<artifactId>junit</artifactId>
+	      	<version>4.11</version>
+	      	<scope>test</scope>
+	    </dependency>
+	    
+	    <dependency>
+	    	<groupId>org.powermock</groupId>
+	      	<artifactId>powermock-module-junit4</artifactId>
+	      	<version>1.5.5</version>
+	      	<scope>test</scope>
+	    </dependency>
+	    
+	    <dependency>
+	    	<groupId>org.powermock</groupId>
+	      	<artifactId>powermock-api-mockito</artifactId>
+	      	<version>1.5.5</version>
+	      	<scope>test</scope>
+	      	
+	      	<exclusions>
+	      		<exclusion>
+	      			<groupId>org.mockito</groupId>
+	      			<artifactId>mockito-all</artifactId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<groupId>org.javassist</groupId>
+	      			<artifactId>javassist</artifactId>
+	      		</exclusion>
+	      	</exclusions>
+	    </dependency>
+	    
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>1.9.5</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.javassist</groupId>
+	      	<artifactId>javassist</artifactId>
+	      	<version>3.18.2-GA</version>
+		</dependency>
 	</dependencies>
+	
 	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<finalName>abc-onlineshop-api</finalName>
 		<plugins>
 			<plugin>
@@ -109,10 +157,21 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
+					<testSourceDir>src/test/java</testSourceDir>
+                	<testOutputDir>target/test-classes</testOutputDir>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>3.0.0-M1</version>
+            	<configuration>
+            		 <forkCount>0</forkCount>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
