--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.8.1</version>
+			<version>2.11.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -104,7 +104,7 @@
 		<dependency>
 	    	<groupId>junit</groupId>
 	      	<artifactId>junit</artifactId>
-	      	<version>4.11</version>
+	      	<version>4.13.1</version>
 	      	<scope>test</scope>
 	    </dependency>
 	    
@@ -159,8 +159,8 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-					<testSourceDir>src/test/java</testSourceDir>
-                	<testOutputDir>target/test-classes</testOutputDir>
+<!--					<testSourceDir>src/test/java</testSourceDir>-->
+<!--                	<testOutputDir>target/test-classes</testOutputDir>-->
 				</configuration>
 			</plugin>
 			
